# romanumeric

./: .ocamlformat  .spin  CONTRIBUTING.md  LICENSE  Makefile  README.md  dune  dune-project  index.html  romanum.opam  romanumeric.opam
.github/workflows/: ci.yml  docs.yml  main.yml  release.yml
lib/: config.ml  config.mli  dune  glyph.ml  glyph.mli  roman.ml  roman_numeral.ml  roman_numeral.mli  romanum_error.ml  romanum_error.mli  romanumeric.ml  romanumeric.mli  utils.ml  utils.mli
romanumeric/: index.html
romanumeric/Romanumeric/: index.html
romanumeric/Romanumeric/Roman/: index.html
script/: install.sh  release-make-skeleton.js  release-postinstall.js
test/: decoding_test.ml  dune  utils_test.ml
test/suites/: decoding_suite.ml  encoding_suite.ml  reference.tsv  utils.ml  utils_suite.ml
test/support/: test_runner.ml
