(library
 (name romanum)
 (public_name romanum)
 (libraries containers)
 (inline_tests)
 (preprocess
  (pps ppx_inline_test))
 (flags
  (:standard -open ContainersLabels))
  )

(rule
 (action
  (write-file open_lib "#require \"romanum\";;\nopen Romanum;;\n")))

(mdx
 (files *.mli)
 (preludes open_lib)
 (packages romanum))

(include_subdirs unqualified)
