(library
 (name romanumeric)
 (public_name romanumeric)
 (libraries containers)
 (flags
  (:standard -open ContainersLabels)))

(rule
 (action
  (write-file open_lib "#require \"romanumeric\";;\nopen Romanumeric;;\n")))

(mdx
 (files *.mli)
 (preludes open_lib)
 (deps
  (package romanumeric)))

(include_subdirs unqualified)
